website/versioned_docs/version-1.9.1/TrainingSession.md
---
title:  Training Session
---


## SEARCA Phillippines 2021 (Online)

**_22-26 March, 2021_**

Trainers: Alexis Drogoul, Arthur Brugière, Patrick Taillandier, Nguyen Ngoc Doanh


## AWP 2021(Online)

**_1-5 March, 2021_**

Trainers: Arthur Brugière, Alexis Drogoul, Huynh Quang Nghi, Nguyen Ngoc Doanh, Patrick Taillandier, Truong Chi Quang

## USTH Training session 2020

**_May 2020 - Hanoi, Vietnam_**

Trainers: Benoit Gaudou

## SMAC Toulouse 2020

**_April 2020 - Toulouse, France_**

Trainers: Benoit Gaudou, Arthur Brugiere, Damien, Nicolas Verestaevel

## Application to disaster management and evacuation

**_17-21 February - Cebu, Phillippines_**

Trainers: Alexis Drogoul, Benoit Gaudou, Arthur Brugiere

## Training session TLU 2019

**_October 2019 - Hanoi, Vietnam_**

Trainers: Benoit Gaudou, Nguyen Ngoc Doanh, Arthur Brugiere, Doryan Kaced

## AWP Phnom Penh 2019

**_8-12 July, Phnom Penh, Cambodia_**

This is a training session that focuses on water urban risks: designing evacuation strategies in case of flooding with Agent-Based Modeling and GAMA

## Formation Toulouse 2019

**_May 2019 - Toulouse, France_**

Trainers: Patrick Taillandier, Doryan Kaced, Renauld Misslin, Frèdéric Amblard, Benoit Gaudou

## Training session Brasilia 2019

**_Feb 201 - Brasilia, Brazil_**

Trainers: Benoit Gaudou, Ch. Le Page

## Application to disaster management and evacuation

**_28 Jan - 1 Feb, Phillippines_**

Trainers: Alexis Drogoul, Benoit Gaudou, Kevin Chapuis

## AWP Can Tho 2018

**_July - Can Tho, Vietnam_**

Trainers: Alexis Drogoul, Patrick Taillandier, Benoit Gaudou, Truong Chi Quang, Damien Philippon, Kevin Chapuis, Huynh Quang Nghi

## SCEMSITE 2018

**_May 2018_**

Trainers: Patrick Taillandier, Oliver Therond

## Formation Toulouse 2018

Trainers: Patrick Taillandier, Benoit Gaudou

## GAMA 1.7RC1 training session - Pays-Bas

**_December 2017_**

## Analysis of land use dynamics (JTD 2017)

**_9-14 July 2017_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 11th JTD, the topic was about the contributions of modeling for the analysis of land use dynamics. Case study: Thanh Phu district, Ben Tre province (Mekong delta) 2000-2010.

Trainers: Alexis Drogoul, Patrick Taillandier, Quang Nghi Huynh, Quang Chi Truong, Damien Philippon

## Master TRIAD 2017

**_Jan 2017_**

## EDSS USTH Master 2016

**_November 2016 - Hanoi, Vietnam_**

Trainers: Patrick Taillandier, Nicolas Marilleau, Benoit Gaudou

## Design urban energy transition policies (JTD 2016)

**_10-15 July 2016_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 10th JTD, the topic was about the use of computer models to help design urban energy transition policies.

Trainers: Javier Gil-Quijano, Alexis Drogoul, Benoît Gaudou, Patrick Taillandier, Julien Mazars, Hypatia Nassopoulos, Damien Philippon

## Modeling for supporting decisions in urban management issues

**_7-11 December 2015 - Siem Reap (Cambodia)_**

![resources/other/trainingSession/SiemReap2015/photos/group.JPG](/resources/other/trainingSession/SiemReap2015/photos/group.JPG)

This training session took place at the Apsara Authorities, where we introduced how to build a model with agent-based approach, using GAMA. In a new and very fast-growing city such as Siem Reap, some measures have to be taken to anticipate the future of the city, and modeling is a science that can give some solutions to face those problems.

The training session was divided into 2 parts:

* A theoretical part (3 days) dealing with the following subjects :
  * Urban issues and introduction to Agent-Based Modeling
  * Presentation of the modeling methodology
  * Introduction to GAMA with a model on urban segregation
  * GIS datas and graphs to model urban mobility
  * GIS, Raster datas and graphs to model urban growth
  * Use of experiments to calibrate and explore models
* A practical part (2 days) to build a model about urban mobility in Siem Reap (by groups of 4/5 people)

|![resources/other/trainingSession/SiemReap2015/photos/theorie.JPG](/resources/other/trainingSession/SiemReap2015/photos/theorie.JPG)|![resources/other/trainingSession/SiemReap2015/photos/group_Alexis.JPG](/resources/other/trainingSession/SiemReap2015/photos/group_Alexis.JPG)|
|---|---|

Trainers: Drogoul Alexis, Gaudou Benoit, Trung Quang, Philippon Damien, Mazars Julien.



## Epidemiological risks and the integration of regional health policies (JTD 2015)

**_19-24 July 2015_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 9th JTD, the topic was about epidemiological risks and the integration of regional health policies with the application of modeling by GAMA platform to decision support.

Trainers: Alexis Drogoul, Vo Duc An, Benoit Gaudou, Damien Philippon, Chi-Quang Truong

## MAPS 8 2015

**_8-25 June 2015_**

## Nex Days 2015 (GAMA 1.6.1)

**_May 2015_**

## MISS ABMS 2014

**_September 2014_**

## MAPS epidemic city tutorial 2014

**_July 2014_**

## GAMA training session Phillippines

**_12-16 Jan 2015 - Quezon, Phillippines_**

## A Glance at Sustainable Urban Development (JTD)

**_July 2014 - Da lat (Vietnam)_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 8th JTD, the topic was about sustainable urban development, and a workshop has been made especially about how to use tools as GAMA to build models in order to explore and understand urban spatial dynamics.

Trainers: Drogoul Alexis, Banos Arnaud, Huynh Quang Nghi, Truong Chi Quang, Vo Duc An.

Here is the link to download the pdf report of the JTD 2014: https://drive.google.com/file/d/0B2Go6pohIhQcbERhczZRd253UUU/view.

## AUF 2013

**_November 2013_**

## MISS ABM 2013

**_October 2013_**

## The perception and Management of Risk (JTD)

**_July 2013 - Da lat (Vietnam)_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 7th JTD, the topic was about the perception and management of risks, and a workshop has been made especially about how to use tools as GAMA to build models in order to understand past crises to better understand the present.

Trainers: Alexis Drogoul, Benoit Gaudou, Nasser Gasmi, Arnaud Grignard, Patrick Taillandier, Olivier Tessier, Vo Duc An

Here is the link to download the pdf report of the JTD 2013: https://drive.google.com/file/d/0B2Go6pohIhQcNXFwVllHd2pFdlk/view.

## Can Tho training session 2012

**_November 2012 - Can Tho, Vietnam_**

## ESSA Tutorial 2012

## Water and its many Issues (JTD)

**_July 2012 - Vietnam_**

The JTD ([Journées de Tam Dao](http://www.tamdaoconf.com/)) is an annual gathering of french-talkers researchers during the summer for one week, dealing with a specific subject related to sustainable development. For this 6th JTD, the topic was about the perception and management of risks, and a workshop has been made especially about how to use tools as GAMA to build models with an agent-based approach.

Trainers : Alexis Drogoul, Benoit Gaudou, Arnaud Grignard, Patrick Taillandier, Vo Duc An

Here is the link to download the pdf report of the JTD 2012: https://docs.google.com/file/d/0B2Go6pohIhQcUWRKU2hPelNqQmc/view.

## Introduction of GAMA 1.4

**_5 December 2011 - Bondy, France_**

This training session was held at PDI Doctoral School, Bondy. The main topic of this session is the introduction of GAMA 1.4 with its advances:

  * Deep refactoring work of the source code
  * New programming language GAML (not based on XML)
  * Integration of a true IDE based on Eclipse
  * Deep refactoring of the meta-model
  * Better integration of multi-levels
  * New important notion: topology
  * New variable types: geometry, graph, path, topology
  * Many more novelties/improvements/enrichments...

Trainers: Alexis Drogoul, Patrick Taillandier, Benoit Gaudou, Vo Duc An, Jean-Daniel Zucker, Edouard Amouroux

## Formation à IRD Bondy

**_Octorber 2010 - Bondy (France)_**

This training session was held at IRD Bondy. The topic of this session was about the future of GAMA and a glance at agent-based models were built based on the GAMA platform.
 
Trainers: Alexis Drogould, Patrick Taillandier, Edouard Amouroux 

## Introduction to the GAMA and PAMS platforms (IFI 2009)

**_26-28 October 2009 - Hanoi (Vietnam)_**

This training session was held at IFI Hanoi. The topic of this session was about the introduction of GAMA and PAMS platforms, and how to use tools such as GAMA to build models with an agent-based approach.

Trainers: Alexis Drogoul, Vo Duc An, Patrick Taillandier, Benoit Gaudou, Chu Thanh Quang, Jean-Daniel Zucker, François Sempé, Guillaume Chérel, Nicolas Marilleau
